.release-hardening-error.txt
Traceback (most recent call last):
  File "/home/runner/work/DTTN-CLI/DTTN-CLI/scripts/apply-release-hardening.py", line 54, in <module>
    main()
  File "/home/runner/work/DTTN-CLI/DTTN-CLI/scripts/apply-release-hardening.py", line 46, in main
    exec(compile(code, "release-hardening-embedded.py", "exec"), {})
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "release-hardening-embedded.py", line 132
    update_start = main.index("            Command::Update {")
IndentationError: unexpected indent
